Adding other fields from JOIN stmt